fix(password-reset.component): adjust positioning of arrow-back icon for better alignment

--- a/src/app/login/password-send-email/password-reset/password-reset.component.scss
+++ b/src/app/login/password-send-email/password-reset/password-reset.component.scss
@@ -35,7 +35,7 @@
     .arrow-back {
       position: absolute;
       left: 5%;
-      top: 10%;
+      top: 14%;
       width: 24px;
       height: 24px;
       border-radius: 100%;
@@ -176,6 +176,11 @@ mat-dialog-content {
     width: 50vw !important;
     min-width: 500px !important;
     padding: 24px !important;
+
+    .arrow-back {
+      top: 15% !important;
+      left: 5% !important;
+    }
   }
 
   .passwort-reset-content-width {
@@ -212,7 +217,7 @@ mat-dialog-content {
     }
 
     .arrow-back {
-      top: 5% !important;
+      top: 8% !important;
       left: 5% !important;
     }
   }
@@ -257,7 +262,7 @@ mat-dialog-content {
     }
 
     .arrow-back {
-      top: 4% !important;
+      top: 5% !important;
       width: 20px !important;
       height: 20px !important;
     }
